--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 </head>
 
 <body>
-    <a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false'
+    <a-scene vr-mode-ui='enabled: true' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: true'
         renderer='antialias: true; alpha: true'>
-        <a-camera gps-new-camera='gpsMinDistance: 40'></a-camera>
-        <a-entity material='color: red' geometry='primitive: box'
-            gps-new-entity-place="longitude: 12.846830; latitude: 77.490607;" scale="10 10 10"></a-entity>
+        <a-camera gps-camera='gpsMinDistance: 2; alert: true'></a-camera>
+
+        <a-box look-at="[gps-camera]" position="0 0 -3" rotation="0 45 0" color="blue"></a-box>
+        <a-box look-at="[gps-camera]" gps-entity-place="longitude: 12.846862; latitude: 77.490619;" position="0 10 0"
+            scale="100 100 100" rotation="0 45 0" color="red"></a-box>
     </a-scene>
 </body>
 
