--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 
 <head>
-    <title>AR.js A-Frame Location-based</title>
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script type='text/javascript'
-        src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
-    <script type='text/javascript'
-        src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+    <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
 </head>
 
-<body>
-    <a-scene vr-mode-ui='enabled: true' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: true'
-        renderer='antialias: true; alpha: true'>
-        <a-camera gps-camera='gpsMinDistance: 2; alert: true'></a-camera>
+<body style="margin: 0; overflow: hidden;">
+    <a-scene renderer="logarithmicDepthBuffer: true;" embedded loading-screen="enabled: false;"
+        arjs="sourceType: webcam; debugUIEnabled: false;">
+        <a-assets>
+            <a-asset-item id="animated-asset" src="./asset.glb"></a-asset-item>
+        </a-assets>
+
+        <a-entity look-at="[gps-camera]" animation-mixer="loop: repeat" gltf-model="#animated-asset" scale="10 10 10"
+            gps-entity-place="latitude: 12.846857; longitude: 77.490618;"></a-entity>
 
         <a-box look-at="[gps-camera]" position="0 0 -3" rotation="0 45 0" color="blue"></a-box>
-        <a-box look-at="[gps-camera]" gps-entity-place="longitude: 12.846862; latitude: 77.490619;" position="0 10 0"
-            scale="100 100 100" rotation="0 45 0" color="red"></a-box>
+
+        <a-camera gps-camera rotation-reader></a-camera>
     </a-scene>
 </body>
 
